RESOLVED FIXED13278
REGRESSION: cannot change SELECT option
https://bugs.webkit.org/show_bug.cgi?id=13278
Summary REGRESSION: cannot change SELECT option
Alexey Proskuryakov
Reported 2007-04-04 04:22:08 PDT
See the attached test case.
Attachments
test case (581 bytes, text/html)
2007-04-04 04:22 PDT, Alexey Proskuryakov
no flags
proposed fix (3.97 KB, patch)
2007-04-04 12:52 PDT, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2007-04-04 04:22:42 PDT
Created attachment 13944 [details] test case
mitz
Comment 2 2007-04-04 04:57:24 PDT
Isn't this the USPS (now trenitalia.com) bug?
Alexey Proskuryakov
Comment 3 2007-04-04 05:29:08 PDT
Yes, this is a reduction of the trenitalia.com bug (see dependencies), but I'm not sure if it's the only problem there.
Alexey Proskuryakov
Comment 4 2007-04-04 12:52:31 PDT
Created attachment 13948 [details] proposed fix Notes to self: - looks like trenitalia.com works now, but should test some more; - I only ran fast/forms tests so far.
Darin Adler
Comment 5 2007-04-04 13:17:08 PDT
Comment on attachment 13948 [details] proposed fix r=me
Alexey Proskuryakov
Comment 6 2007-04-04 21:57:43 PDT
Committed revision 20714.
Note You need to log in before you can comment on or make changes to this bug.