        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=13278
        REGRESSION: cannot change SELECT option

        Test: fast/forms/option-change-single-selected.html

        * html/HTMLSelectElement.cpp:
        (WebCore::HTMLSelectElement::setSelectedIndex): If multiple selection is not allowed,
        be sure to deselect the previous option.



Canonical link: https://commits.webkit.org/17360@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20714 268f45cc-cd09-0410-ab3c-d52691b4dbfc